--- a/52x_week4.html
+++ b/52x_week4.html
@@ -5,6 +5,7 @@
 	    <title>HTML5.2x Week 4</title>
     </head>
     <body>
+        <H1>Web Workers</H1>
         <P><B>NOTE:</B> This page must served over HTTP; file:// doesn't work.</P>
         <P>Dedicated Web Workers are local to a given page/tab.</P>
         
@@ -59,6 +60,49 @@
                  worker.terminate();
                  document.body.appendChild(document.createTextNode("10 seconds elapsed; worker has been killed."));
              }, 10000);
+            </script>
+
+            <HR>
+
+            <H1>Orientation / Device Motion APIs</H1>
+            <P>Obviously, this won't be much use if not running on a mobile device :)</P>
+            
+            <DIV id="LR"></DIV>
+            <DIV id="FB"></DIV>
+            <DIV id="DIR"></DIV>
+            <DIV id="MOTION"></DIV>
+            <P>Roll: [-90...90], Pitch: [-180...180], Yaw: [0...360], Accel: m/s^2</P>
+            <script>
+             if (window.DeviceOrientationEvent){
+                 console.log("DeviceOrientationEvent is supported!");
+                 window.addEventListener(
+                     'deviceorientation',
+                     function(e) {
+                         document.querySelector("#LR" ).innerHTML = "gamma (roll): " + Math.round(e.gamma);
+                         document.querySelector("#FB" ).innerHTML = "beta (pitch): " + Math.round(e.beta);
+                         document.querySelector("#DIR").innerHTML = "alpha (yaw): "  + Math.round(e.alpha);
+                     },
+                     false);
+                 window.addEventListener(
+                     'devicemotion',
+                     function(e) {
+                         var x,y,z;
+                         if (e.acceleration) { // only true on devices w/gyroscope, including all iOS
+                             x = e.acceleration.x;
+                             y = e.acceleration.y;
+                             z = e.acceleration.z;
+                             document.querySelector("#MOTION").innerHTML = "accel:<BR>"+x+"<BR>"+y+"<BR>"+z;
+                         } else {
+                             x = e.accelerationIncludingGravity.x;
+                             y = e.accelerationIncludingGravity.y;
+                             z = e.accelerationIncludingGravity.z;
+                             document.querySelector("#MOTION").innerHTML = "accel+grav:<BR>"+x+"<BR>"+y+"<BR>"+z;
+                         }
+                     },
+                     true);
+             } else {
+                 alert("DeviceOrientationEvent is not supported");
+             }
             </script>
     </body>
 </html>
