--- a/week3.html
+++ b/week3.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-	</head>
+  <head>
+	<meta charset="utf-8"/>
+  </head>
 	<body>
 		<canvas id="myCanvas" width="200" height="200"
 			style="border:1px solid black">
