--- a/week3.html
+++ b/week3.html
@@ -3,125 +3,127 @@
   <head>
 	<meta charset="utf-8"/>
   </head>
-	<body>
-		<canvas id="myCanvas" width="200" height="200"
-			style="border:1px solid black">
-			Canvas is not supported by your browser. WTF dude.
-		</canvas>
+  <body>
+	<canvas id="myCanvas" width="200" height="200"
+		style="border:1px solid black">
+	  Canvas is not supported by your browser. WTF dude.
+	</canvas>
+	
+	<canvas id="myCanvas2" width="500" height="400"
+		style="border:1px solid blue">
+	  Canvas is not supported by your browser. WTF dude.
+	</canvas>
+	
+	<video width="272" height="480" controls="controls" id="pitchVideo" 
+		poster="pitch-poster.jpg">
+	  <source src="pitch.mp4" preload="none" type="video/mp4"/>
+	  Your browser doesn't support the &lt;video&gt; element. You can <A HREF="pitch.mp4" download="pitch.mp4">download</A> the file instead.
+	</video>
+	
+	<canvas id="myCanvas3" width="1000" height="400"
+		style="border:1px solid blue">
+	  Canvas is not supported by your browser. WTF dude.
+	</canvas>
+	
+	<script>
+	"use strict";
+	function myCanvasInit() {
+	  var canvas = document.querySelector("#myCanvas");
+	  var ctx = canvas.getContext("2d");
+	  
+	  // Draw some stuff
+	  ctx.fillRect(10,10, 100, 100);
+	  ctx.strokeStyle="blue"
+	  ctx.fillStyle = "red";
+	  ctx.strokeRect(30,30, 100, 100); // ignores fillStyle
+	  ctx.clearRect(50,50, 50,50);
+	  
+	  ctx.save();
+	  ctx.translate(20,100);
+	  ctx.rotate(-Math.PI/4);
+	  ctx.font = "italic 20pt Calibri";
+	  ctx.fillText("Boogies", 0,0, 70,22);
+	  ctx.restore();
+	  
+	  ctx.fillStyle = "lightblue";
+	  ctx.fillRect(100,100, 20,20);
+	  
+	  // asynchronous image load/draw
+	  var imageObj = new Image();
+	  imageObj.onload = function() {
+		ctx.save();
+		ctx.globalAlpha = 0.5;
+		ctx.translate(75,20);
+		ctx.drawImage(imageObj,0,0, 100,150);
+		
+		ctx.translate(0,150-50);
+		ctx.drawImage(imageObj, 0,0,512,100, 0,0,100,25);
+		ctx.restore();
+	  }
+	  imageObj.src = "html5.jpg";
+	  // NOTE: there are much better alternatives to setInterval();
+	  // see requestAnimationFrame() in week4
+	  setInterval("processFrame()", 17); // call each 25 ms
+	  
+	  var canvas3 = document.querySelector("#myCanvas3");
+	  var ctx3 = canvas3.getContext("2d");
+	  // Regular paths are just a series of lineTo()s
+	  ctx3.beginPath();
+	  ctx3.moveTo(50,50);
+	  ctx3.lineTo(50,100);
+	  ctx3.lineTo(100,100);
+	  ctx3.stroke();
+	  
+	  // Or use quadraticCurveTo() to specify a single control point
+	  // and an endpoint
+	  ctx3.beginPath();
+	  ctx3.moveTo(150,50);
+	  ctx3.quadraticCurveTo(150,100, 200,100);
+	  ctx3.stroke();
 
-		<canvas id="myCanvas2" width="500" height="400"
-			style="border:1px solid blue">
-			Canvas is not supported by your browser. WTF dude.
-		</canvas>
+	  // Or use bezierCurveTo() to specify two control points
+	  // and an endpoint.
+	  ctx3.beginPath();
+	  ctx3.moveTo(250,50);
+	  ctx3.bezierCurveTo(250,100, 275,150, 300,100);
+	  ctx3.stroke();
 
-		<video width="272" height="480" controls="controls" id="pitchVideo" 
-			poster="pitch-poster.jpg">
-			<source src="pitch.mp4" preload="none" type="video/mp4"/>
-			Your browser doesn't support the &lt;video&gt; element. You can <A HREF="pitch.mp4" download="pitch.mp4">download</A> the file instead.
-		</video>
+	  // a more complex bezier path, automatically closed at
+	  // the end
+	  ctx3.beginPath();
+	  ctx3.moveTo(350, 50);
+	  ctx3.bezierCurveTo(350,100, 375,150, 400,100);
+	  ctx3.closePath();
+	  ctx3.fill();
 
-		<canvas id="myCanvas3" width="1000" height="400"
-			style="border:1px solid blue">
-			Canvas is not supported by your browser. WTF dude.
-		</canvas>
+	  // arcs
+	  ctx3.beginPath();
+	  ctx3.arc(50,200, 25, 0, Math.PI/2, false); // drawn clockwise
+	  ctx3.fill(); // note: filling an arc does not give a wedge; it connects the start to the end like any other curve
 
-		<script>
-		"use strict";
-		function myCanvasInit() {
-			var canvas = document.querySelector("#myCanvas");
-			var ctx = canvas.getContext("2d");
-
-			// Draw some stuff
-			ctx.fillRect(10,10, 100, 100);
-			ctx.strokeStyle="blue"
-			ctx.fillStyle = "red";
-			ctx.strokeRect(30,30, 100, 100); // ignores fillStyle
-			ctx.clearRect(50,50, 50,50);
-			
-			ctx.save();
-			ctx.translate(20,100);
-			ctx.rotate(-Math.PI/4);
-			ctx.font = "italic 20pt Calibri";
-			ctx.fillText("Boogies", 0,0, 70,22);
-			ctx.restore();
-			
-			ctx.fillStyle = "lightblue";
-			ctx.fillRect(100,100, 20,20);
-			
-			// asynchronous image load/draw
-			var imageObj = new Image();
-			imageObj.onload = function() {
-				ctx.save();
-				ctx.globalAlpha = 0.5;
-				ctx.translate(75,20);
-				ctx.drawImage(imageObj,0,0, 100,150);
-				
-				ctx.translate(0,150-50);
-				ctx.drawImage(imageObj, 0,0,512,100, 0,0,100,25);
-				ctx.restore();
-			}
-			imageObj.src = "html5.jpg";
-			setInterval("processFrame()", 17); // call each 25 ms
-
-			var canvas3 = document.querySelector("#myCanvas3");
-			var ctx3 = canvas3.getContext("2d");
-			// Regular paths are just a series of lineTo()s
-			ctx3.beginPath();
-			ctx3.moveTo(50,50);
-			ctx3.lineTo(50,100);
-			ctx3.lineTo(100,100);
-			ctx3.stroke();
-
-			// Or use quadraticCurveTo() to specify a single control point
-			// and an endpoint
-			ctx3.beginPath();
-			ctx3.moveTo(150,50);
-			ctx3.quadraticCurveTo(150,100, 200,100);
-			ctx3.stroke();
-
-			// Or use bezierCurveTo() to specify two control points
-			// and an endpoint.
-			ctx3.beginPath();
-			ctx3.moveTo(250,50);
-			ctx3.bezierCurveTo(250,100, 275,150, 300,100);
-			ctx3.stroke();
-
-			// a more complex bezier path, automatically closed at
-			// the end
-			ctx3.beginPath();
-			ctx3.moveTo(350, 50);
-			ctx3.bezierCurveTo(350,100, 375,150, 400,100);
-			ctx3.closePath();
-			ctx3.fill();
-
-			// arcs
-			ctx3.beginPath();
-			ctx3.arc(50,200, 25, 0, Math.PI/2, false); // drawn clockwise
-			ctx3.fill(); // note: filling an arc does not give a wedge; it connects the start to the end like any other curve
-
-			// arcTo takes an intersection point and an endpoint.
-			// It's mainly used for rounded rectangles
-			//ctx3.arcTo(intx, inty, endx, endy);
-			
-			
-		}
-		var angle = 0;
-		function processFrame() {
-			console.time("draw timer");
-			var canvas2 = document.querySelector("#myCanvas2");
-			var ctx2 = canvas2.getContext("2d");
-			var video = document.querySelector("#pitchVideo");
-			ctx2.clearRect(0,0,canvas2.width, canvas2.height);
-			ctx2.save();
-			ctx2.translate( canvas2.width/2,  canvas2.height/2);
-			ctx2.rotate(angle);
-			ctx2.translate(-canvas2.width/2, -canvas2.height/2);
-			angle += 0.001;
-			ctx2.drawImage(video, 0,0, canvas2.width, canvas2.height);
-			ctx2.restore();
-			console.timeEnd("draw timer");
-		}
-		window.onload = myCanvasInit; // Don't grab a context until the page is ready!
-		</script>
-	</body>
+	  // arcTo takes an intersection point and an endpoint.
+	  // It's mainly used for rounded rectangles
+	  //ctx3.arcTo(intx, inty, endx, endy);
+	  
+	  
+	}
+	var angle = 0;
+	function processFrame() {
+	  console.time("draw timer");
+	  var canvas2 = document.querySelector("#myCanvas2");
+	  var ctx2 = canvas2.getContext("2d");
+	  var video = document.querySelector("#pitchVideo");
+	  ctx2.clearRect(0,0,canvas2.width, canvas2.height);
+	  ctx2.save();
+	  ctx2.translate( canvas2.width/2,  canvas2.height/2);
+	  ctx2.rotate(angle);
+	  ctx2.translate(-canvas2.width/2, -canvas2.height/2);
+	  angle += 0.001;
+	  ctx2.drawImage(video, 0,0, canvas2.width, canvas2.height);
+	  ctx2.restore();
+	  console.timeEnd("draw timer");
+	}
+	window.onload = myCanvasInit; // Don't grab a context until the page is ready!
+	</script>
+  </body>
 </html>
